kubernetes/foundation/cluster/logging-loki-namespace.yaml
#
# Namespace for Grafana Loki and Promtail.
#
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: disabled
  name: logging
