kubernetes/foundation/cluster/logs-loki-namespace.yaml
#
# Namespace for Grafana Loki and Promtail.
#
---
apiVersion: v1
kind: Namespace
metadata:
  name: logs
