kubernetes/foundation/cluster/secrets-vault-namespace.yaml
#
# Namespace for HashiCorp Vault.
#
---
apiVersion: v1
kind: Namespace
metadata:
  name: vault
