kubernetes/foundation/cluster/mesh-istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: kubedmeo-gateway
spec:
  selector:
    app: kubedemo-gateway-controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
