kubernetes/foundation/cluster/observability-grafana-ingress.yaml
#
# Allow traffic into Grafana UI via Istio.
#
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/kubedemo-gateway
  http:
    - match:
        - uri:
            prefix: "/grafana/"
        - uri:
            exact: "/grafana"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: grafana
            port:
              number: 3000
