kubernetes/foundation/cluster/secrets-vault-virtual-services.yaml
---
#
# Allow traffic into Vault UI via Istio.
#
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vault
  namespace: vault
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/kubedemo-gateway
  http:
    - match:
        - uri:
            prefix: "/vault/"
        - uri:
            exact: "/vault"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: vault-ui
            port:
              number: 8200
